appointment/src/objects/Calendar_Filters__c.object
<CustomObject>
    <fields>
        <fullName>Calendar_Settings__c</fullName>
        <label>Settings</label>
        <referenceTo>Calendar_Settings__c</referenceTo>
        <relationshipLabel>Filters</relationshipLabel>
        <relationshipName>Calendar_Filters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Field_Name__c</fullName>
        <label>Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Type__c</fullName>
        <label>Field Type</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operator__c</fullName>
        <label>Operator</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Calendar Filters</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Filter Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Calendar Filters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>